--- a/index.css
+++ b/index.css
@@ -7,6 +7,25 @@
   height: 20vh;
 }
 
+.bigContainer {
+  text-align: center;
+
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;    
+  grid-template-rows: 1fr;
+  height: 1vh;
+}
+
+
+.bigContainer div {
+  padding: 15px;
+  font-size: 32px;
+  font-family: Helvetica;
+  font-weight: bold;  
+}
+
+
 #container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));  
@@ -14,4 +33,13 @@
 
   height: 80vh;
   background-color: blueviolet;
+}
+
+.sidebar-Container{
+  display: grid;
+  grid-template-rows: 5fr 3fr;
+  grid-column: 1 / 2;
+  grid-row: 1 / 4;
+  gap: 15px;    
+  background-color: rgb(43, 116, 226);
 }
